# liman

./: .gitignore  .release-please-manifest.json  README.md  codecov.yml  commitlint.config.cjs  lint-staged.config.js  package.json  pnpm-lock.yaml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: docs.yaml  go-checks.yaml  go-release.yaml  python-checks.yaml  python-release.yaml  release.yaml  typescript-checks.yaml
.husky/: pre-commit
docs/: .env.example  .prettierignore  README.md  components.json  docusaurus.config.ts  instrumentation-client.ts  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
docs/app/: global.css  layout.config.tsx  layout.tsx
docs/app/(home)/: layout.tsx  page.tsx
docs/app/(home)/_components/: Community.tsx  Features.tsx  Footer.tsx  GettingStarted.tsx  Hero.tsx  Subscribe.tsx
docs/app/(home)/blog/: page.tsx
docs/app/api/search/: route.ts
docs/app/api/subscribe/: route.ts
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/app/rss.xml/: route.ts
docs/content/blog/: 2025-07-30_intro.mdx  2025-08-17_simple_openapi.mdx
docs/content/docs/: glossary.mdx  meta.json  poc.mdx
docs/content/docs/getting-started/: adding-tools.mdx  meta.json  openapi-integration.mdx  simple-agent.mdx
docs/content/docs/python/: index.mdx  meta.json
docs/content/docs/specification/: internal_types.mdx  llm_node.mdx  (+4 more)
docs/public/asciinema/: simple_openapi.cast
docs/scripts/: generate-python.mjs
docs/src/: links.tsx  mdx-components.tsx
docs/src/components/: Analytics.tsx
docs/src/css/: custom.css
docs/src/lib/: metadata.ts  source.ts
docs/src/pages/: index.tsx
go/: BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go
go/pkg/liman_core/: BUILD.bazel  main.go  main_test.go
go/scripts/: lint.sh
proto/: liman.proto
python/: .gitignore  README.md  pyproject.toml  shared_poe.toml
python/samples/simple_openapi/: .env.example  README.md  main.py  pyproject.toml  server.py
python/samples/simple_openapi/specs/: chat_llm.yaml  confirm_action_tool.yaml
python/scripts/: griffe_libraries.py
scripts/ci/: detect_changed_packages.py
typescript/: eslint.config.mts  package.json  pnpm-lock.yaml  tsconfig.base.json
(+161 files in other folders)
