load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

gazelle(name = "gazelle")

go_binary(
    name = "liman",
    embed = [":liman_lib"],
    importpath = "github.com/gurobokum/liman",
    visibility = ["//visibility:public"],
)

go_library(
    name = "liman_lib",
    srcs = ["main.go"],
    importpath = "github.com/gurobokum/liman",
    visibility = ["//visibility:private"],
    deps = ["//pkg/liman_core"],
)

filegroup(
    name = "all_go_files",
    srcs = [
        "main.go",
        "go.mod",
        "go.sum",
        "//pkg/liman_core:all_go_files",
    ],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "lint",
    srcs = ["scripts/lint.sh"],
    data = [ "//:all_go_files" ],
)
