[project]
name = "liman_simple_openapi"
version = "0.1.0"
description = "Simple OpenAPI integration sample for Liman AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.30",
    "liman>=0.1.0a2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
]
